added link to chat room

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
+  <h1>This is the link to the room: <a href="https://gitter.im/hackthon2017ZAX/Lobby?utm_source=share-link&utm_medium=link&utm_campaign=share-link">link</a></h1>
 </body>
 
 
