--- a/index.html
+++ b/index.html
@@ -2,10 +2,25 @@
 <html>
 <head>
   <title>Hackathon 2017 ZAX</title>
+  <link rel = "stylesheet" type = "text/css" href = "style.css">
 </head>
 
-<body>
-  <h1>This is the link to the room: <a href="https://gitter.im/hackthon2017ZAX/Lobby?utm_source=share-link&utm_medium=link&utm_campaign=share-link">link</a></h1>
+<body onload = "setInterval( timer(), 1000)" >
+  <h1 id = "doomsday">Time Left In The World:</h1>
+  <h2 id = "timer" >
+
+
+  </h2>
+  <h2 >
+    Years:Days:Hours:Minutes:Seconds
+
+  </h2>
+  
+  <script src = "timer.js"> </script>
+
+
+
+
 </body>
 
 
