--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel = "stylesheet" type = "text/css" href = "style.css">
 </head>
 
-<body onload = "setInterval( timer(), 1000)" >
+<body onload = "setInterval( timer, 1000)" >
   <h1 id = "doomsday">Time Left In The World:</h1>
   <h2 id = "timer" >
 
@@ -15,7 +15,7 @@
     Years:Days:Hours:Minutes:Seconds
 
   </h2>
-  
+
   <script src = "timer.js"> </script>
 
 
