set up for additional features

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body onload = "setInterval( timer, 1000)" >
   <div class = "timer">
   <h1 id = "doomsday">Time Left In The World:</h1>
+  <div id="watsonNotes"></div>
 
 
 
@@ -22,13 +23,15 @@
   </h2>
 
 
-  <h2 >
+  <h2>
     Y:M:D:H:M:S
 
   </h2>
 
   <button id="doomBtn">How Close Are We to Doomsday?</button>
   <div id="dataDiv"></div>
+
+  <footer>Coded by Team UnlimiZax | Powered by
 
 </div>
 
