--- a/static/index.html
+++ b/static/index.html
@@ -31,10 +31,23 @@
   <div id="dataDiv"></div>
 
 </div>
+<div data-bttnio-id="btn-7426e86f09c74bf5"
+     data-bttnio-context='{ "user_location": { "latitude": 40.7382869, "longitude": -73.9823721 } }'>
+        
+   </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="doomArticles.js"></script>
 <script src = "timer.js"> </script>
+<script>
+window.ButtonWebConfig = {
+  applicationId: 'app-2bfccb0184db6ac5'
+};
+(function(u,s,e,b,t,n){
+  u['__bttnio']=b;u[b]=u[b]||function(){(u[b].q=u[b].q||[]).push(arguments)};t=s.createElement(e);n=s.getElementsByTagName(e)[0];t.async=1;t.src='https://web.btncdn.com/v1/button.js';n.parentNode.insertBefore(t,n)
+})(window, document, 'script', 'bttnio');
+</script>
+
 
 
 
